=== DRomics : Dose response for omics ===

Version 2.2-0 
=============
NEW FEATURES
- Improvement of the computation of low BMD values for designs with a high
ratio between the maximal and minimal (non null) tested doses, with the add
of two arguments to bmdcalc, minBMD and ratio2switchinlog.
- Add of two columns in the output of bmdcalc (BMR.zSD and BMR.xfold)
- Add of a function plotfit2pdf() to plot all fits (or residual plots)
in a pdf file, using the raw scale or the log scale of the dose
- Replacement of the class 'metabolomicdata' by the class 'continuousomicdata'
and add of a function continuousomicdata() that is called by metabolomicdata()
but could be used on other types of continuous omics data such as proteomics data.
- default color changed for bmdplotwithgradient() (green replaced by blue for 
color blind people)
- Add of a vignette
- Removing of three of the four datasets from Zou et al. 2017 to make the 
package lighter
- Add an option 'AICc' for the argument information.criterion in drcfit().
- Add a test on residuals for heteroscedasticity and an output of drcfit: 
residualtests

Version 2.1-0 
=============
NEW FEATURES
- Add of the function bmdplotwithgradient()
- Add of the function ecdfquantileplot()
- Add of an argument named information.criterion in drcfit() to choose 
the use of AIC or BIC for the best fit model selection process.
- Add of the possibility to enter data as an R object of class data.frame
- Add of published datasets (Zhou et al. 2017, Larras etal. 2020) and 
corresponding help pages
- Add of function continuousanchoringdata and modification of itemselect()
to enable the selection of significant responses on continuous anchoring data.
- Add an argument dose_log_transfo in plot.drcfit to enable the use of
log tranformation of the x-axis.
- Add an element in the list of drcfit() output : unfitres giving some 
information on selected items for which the modelling step is not successful